Edited wiki page through web user interface.

--- a/wiki/IcqlibMavenBuild.wiki
+++ b/wiki/IcqlibMavenBuild.wiki
@@ -32,4 +32,24 @@ _mvn clean compile package install_
 
 Maven выполнит сборку библиотеки в jar-файл и скопирует в ваш локальный maven-репозиторий.
 
-Для удобства работы с библиотекой предоставляются демонстрационные .properties файлы commons-logging.properties и log4j.properties, расположенные в директории src/main/props.
+Для удобства работы с библиотекой предоставляются демонстрационные .properties файлы _commons-logging.properties_ и _log4j.properties_, расположенные в директории _src/main/props_.
+
+= Создание проектов для различных IDE =
+
+Система сборки _maven_ содержит средства генерации _project_-файлов для различных IDE. В данной части документа приведены инструкции по созданию таких файлов.
+
+== Eclipse ==
+
+1. Необходимо добавить локальный _maven_-репозиторий в _Eclipse-workspace_, для этого необходимо выполнить команду:
+_mvn -Declipse.workspace=<путь к workspace> eclipse:add-maven-repo_
+
+2. Непосредственно сгенерировать ,project и .classpath файлы, для этого необходимо выполнить команду:
+_mvn eclipse:eclipse_
+
+Если необходимо загрузить исходники используемых библиотек, то нужно добавить в команду параметр
+
+_-DdownloadSources=true_
+
+Если необходимо загрузить _JavaDocs_ для используемых библиотек, то нужно добавить в команду параметр
+
+_-DdownloadJavadocs=true_
